# comfyui-Stat-Imp-nodes

./: .gitignore  NODES.md  README.md  __init__.py  cadence_core.py  cadence_nodes.py  color_core.py  color_nodes.py  conv.py  flow_core.py  flow_nodes.py  nodes.py  pyproject.toml  raft_core.py  warp_core.py
tests/: conftest.py  test_cadence_core.py  test_cadence_nodes.py  test_color_core.py  test_flow_core.py  test_flow_nodes.py  test_flow_warp.py  test_raft_core.py
workflows/: deforum_Flux_CadenceFlow.json  deforum_SDXL_Distilled.json  deforum_SDXL_Distilled_CadenceFlow.json
