[project]
name = "comfyui-stat-imp-nodes"
description = "Clean pure-torch Deforum-style nodes for ComfyUI animation loops: an exact-Deforum depth-aware 3D camera warp (pixel-identical to transform_image_3d) plus LAB/EMA color-coherence nodes that stop feedback-loop color drift."
version = "0.2.0"
license = { text = "MIT" }
dependencies = []

[project.urls]
Repository = "https://github.com/GITHUB_HANDLE/comfyui-Stat-Imp-nodes"

[tool.comfy]
PublisherId = "PUBLISHER_ID"
DisplayName = "ComfyUI Stat-Imp Nodes"
Icon = ""
